--- a/src/App.css
+++ b/src/App.css
@@ -42,12 +42,12 @@ body {
 }
 
 .abtn {
-  background-color: #2874f0; 
+  background-color: #6495ED; 
   color: #fff;
 }
 
 .rbtn {
-  background-color: #ff4444;
+  background-color: #FF6347;
   color: #fff;
 }
 
